<resources>
    <string name="app_name">news</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register" />

    //Abanob start


    //Abanob end

    //Asmaa start
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>



    //Asmaa end

    //Donia start



    //Donia end
</resources>